examples/test/testpolicy2894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2894
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key41: value5
      key1: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value22
      podSelector:
        matchLabels:
          key27: value26
          key7: value22
